// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with iconClassName or addressClassName props should render correctly 1`] = `
<Link
  as="/place/monaco/abc123"
  href="/place?id=abc123"
>
  <a
    className="flex align-items--center"
  >
    <MdMyLocation
      className="my-css-class"
    />
    <span
      className="my-css-class"
    >
      Monaco
    </span>
  </a>
</Link>
`;

exports[`without iconClassName or addressClassName props should render correctly 1`] = `
<Link
  as="/place/monaco/abc123"
  href="/place?id=abc123"
>
  <a
    className="flex align-items--center"
  >
    <MdMyLocation
      className=""
    />
    <span
      className=""
    >
      Monaco
    </span>
  </a>
</Link>
`;
